app/templates/main.css
@import 'icon.css';

html {
  font-family: sans-serif;
  overflow: hidden;
  height: 100%;
}

body {
  overflow: auto;
  height: 100%;
}

ul {
  list-style-type: none;
}

.nav-link {
  color: #EFEFEf;
}

.nav-link:hover {
  color: #EFEFEf;
  opacity: 0.8;
}

.flash-message {
  background-color: #26A69A;
  border: none;
  margin-top: 56px;
  padding: 0;
  text-align: center;
}

.flash-message__list {
  border: none;
  border-radius: 0;
  padding: 0;
}

.flash-message__list-element {
  border-radius: 0;
  border: none;
  border-bottom: solid 1px #f8f9fa;
  background-color: inherit;
  color: white;
  margin-bottom: 0;
}

.item-card {
  padding-bottom: 48px;
  border: none;
}

.item-card__img-top {
  min-height: 180px;
}

.item-card__controls {
  position: absolute;
  bottom: 15px;
  right: 15px;
}

.image-upload-preview {
  align-items: center;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background: #757575;
  border-radius: 4px;
  display: flex;
  height: 300px;
  justify-content: center;
  width: 100%;
  width: 498px;
}

.image-upload-preview:hover {
  cursor: pointer;
  opacity: 0.8;
}

.image-upload-preview:hover::after {
  content: 'Upload image';
  width: 75px;
  height: 75px;
  border: 3px solid white;
  border-radius: 150px;
  line-height: 13;
  font-size: 16px;
  letter-spacing: 0.1px;
  white-space: nowrap;
  text-indent: -19px;
}

.image-upload-preview:hover::before {
  content: '+';
  position: absolute;
  font-size: 27px;
}

.image-upload-preview:hover::before,
.image-upload-preview:hover::after {
  color: white;
  font-weight: bold;
}

.box-shadow {
  box-shadow: 0 3px 2px rgba(0, 0, 0, .06);
}

.btn:focus,
.btn:active,
.list-group-item:active,
.list-group-item:focus {
  box-shadow: none;
  outline: none;
}

.btn:disabled {
  cursor: not-allowed;
}

.btn-cancel {
  margin: 0 22px;
}

.btn-social {
  border: 2px solid #363636;
  display: flex;
  align-self: center;
  background: #444444;
  border-radius: 4px;
  padding: 0.6rem 0.75rem;
  display: inline-block;
  color: white;
  font-weight: 500;
  position: relative;
}

.btn-social:hover {
  color: white;
  background: #414141;
  border-color: #212121;
  text-decoration: none;
}

.btn-social:hover > span:before {
  background: #212121;
}

.btn-social:active {
  color: white;
  opacity: 0.8;
  background: #414141;
}

.btn-social > span {
  margin-left: 24px;
}

.btn-social > span:before {
  content: '';
  width: 2px;
  height: 100%;
  position: absolute;
  background: #363636;
  display: flex;
  left: 46px;
  top: 0;
}

.list-group-item:hover {
  cursor: pointer;
}

.list-group-item__label {
  overflow: auto;
}

.navbar {
  padding-right: 0;
  padding-left: 0;
}

.main-content {
  margin-top: 160px;
}

.category-list {
  transition: all .3s ease;
}

@media only screen and (max-width: 990px) {
  .category-list {
    margin-bottom: 3rem;
  }
}

.category-list__group {
  width: 100%;
  /*height: calc(100% - 54px);*/
  min-height: 148px;
  background-color: lightgray;
  border-radius: 3px;
}

.page {
  width: 100%;
  height: calc(100% - 54px);
  background-color: lightgray;
  border-radius: 3px;
  min-height: 148px;
  margin: 0;
}

.page-container {
  transition: all .3s ease;
}

